--- a/content/posts/hello-world copy/index.mdx
+++ b/content/posts/hello-world copy/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Hello World (example)
+title: Hello World 2
 date: 2019-04-15
 image: ./sunset-beach.jpg
 imageAlt: A beach at sunset with crashing waves.
