--- a/content/posts/my-second-post.mdx
+++ b/content/posts/my-second-post.mdx
@@ -1,6 +1,6 @@
 ---
-title: My Second Post! (example)
-date: 2019-05-15
+title: Citru's
+date: 2023-10-08
 image: 'https://images.unsplash.com/photo-1517694712202-14dd9538aa97?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2100&q=80'
 imageAlt: Laptop on a desk with VS Code open.
 ---
