--- a/posts/functions-for-beginners.mdx
+++ b/posts/functions-for-beginners.mdx
@@ -1,8 +1,8 @@
 ---
 title: Functions for Beginners
-date: 'August 4, 2022'
+date: 'August 4, 2021'
 description: Learn how to create and use functions
-thumbnailUrl: '/javascript-functions-thumbnail.jpeg'
+thumbnailUrl: '/JavaScript.png'
 tags: ['functions', 'javascript']
 ---
 
@@ -13,7 +13,7 @@ tags: ['functions', 'javascript']
 
 <br/>
 
-### This is a Markdown subheading
+### This is a Markdown sub-heading
 We just used a `###` subheading in our blog post.
 
 <SyntaxHighlighter language="javascript">
@@ -24,6 +24,11 @@ We just used a `###` subheading in our blog post.
   `}
 </SyntaxHighlighter>
 
-// this is a code block const doSomething = () => { return console.log('hey') }
+```
+  // this is a code block
+  const doSomething = () => {
+    return console.log('hey')
+  }
+```
 
-<div>Here I'm using a component inside my MarkDown file: {<Button text={"Click me"}/>}</div>
+<div>Here, I'm using a component inside my MarkDown file: {<Button text={"Click me"}/>}</div>
