--- a/posts/ola-mundo copy 2.mdx
+++ b/posts/ola-mundo copy 2.mdx
@@ -1,14 +1,14 @@
 ---
 title: ola mundo
 date: 'August 5, 2021'
-description: Learn how to create and use functions
+description: ola mundo!
 thumbnailUrl: '/JavaScript.png'
 tags: ['functions', 'javascript']
 ---
 
 <div>
-  This is a blog post about <strong>functions</strong>. <br/>
-  We'll learn what functions are, how to write functions, and how to use them.
+  este blogo ée sobre <strong>teste</strong>. <br/>
+ 
 </div>
 
 <br/>
@@ -31,4 +31,4 @@ We just used a `###` subheading in our blog post.
   }
 ```
 
-<div>TESTE Here, I'm using a component inside my MarkDown file: {<Button text={"Click me"}/>}</div>
+<div>TESTE : {<Button text={"Click me"}/>}</div>
