--- a/posts/ola-mundo.mdx
+++ b/posts/ola-mundo.mdx
@@ -1,6 +1,6 @@
 ---
 title: ola mundo
-date: 'August 5, 2021'
+date: 'outubro 11, 2022'
 description: ola mundo!
 thumbnailUrl: '/JavaScript.png'
 tags: ['functions', 'javascript']
