--- a/posts/ola-mundo.mdx
+++ b/posts/ola-mundo.mdx
@@ -1,13 +1,14 @@
 ---
-title: ola mundo
-date: 'outubro 11, 2022'
-description: ola mundo!
+title: Ola mundo!
+date: '11 de outubro de 2022'
+description: post teste...
 thumbnailUrl: '/JavaScript.png'
 tags: ['functions', 'javascript']
 ---
 
 <div>
-  este blogo ée sobre <strong>teste</strong>. <br/>
+
+  este blogo é um <strong>teste</strong>. <br/>
  
 </div>
 
