--- a/posts/Ola-mundo copy.mdx
+++ b/posts/Ola-mundo copy.mdx
@@ -1,8 +1,8 @@
 ---
 title: Ola mundo!
-date: '11 de outubro de 2022'
+date: '12 de outubro de 2022'
 description: post teste...
-thumbnailUrl: '/JavaScript.png'
+thumbnailUrl: '/react.jpg'
 tags: ['functions', 'javascript']
 ---
 
