--- a/posts/Citrus.mdx
+++ b/posts/Citrus.mdx
@@ -1,7 +1,7 @@
 ---
 title: Citrcu's!
 date: '10 de outubro de 2022'
-description: Pagina desenvolvida para encomenda de produtos da agricultura familiar
+description: Pagina desenvolvida para encomendas de produtos da agricultura familiar
 thumbnailUrl: '/citrus.jpg'
 tags: ['functions', 'javascript']
 ---
@@ -10,7 +10,7 @@ tags: ['functions', 'javascript']
 ### Agricultura familiar
 
 
-Pagina desenvolvida para encomenda de produtos da agricultura familiar.
+Pagina desenvolvida para encomendas de produtos da agricultura familiar.
 
 
 
