--- a/posts/Citrus.mdx
+++ b/posts/Citrus.mdx
@@ -23,5 +23,14 @@ Ferramentas utilizadas para o desenvolvimento:
 
 <img src="/pro-citrus.png" alt="citrus" width="100%"/>
 
-[***🍊Live***](https://diegoroney.github.io/newcitrus/index.html)
+<div>
+    <a href="https://diegoroney.github.io/newcitrus/index.html">
+
+        <button type="button" 
+        class="btn btn-outline-info btn-sm">
+        Visite o site
+        </button>
+    </a>
+</div>
+
 
