--- a/posts/Citrus.mdx
+++ b/posts/Citrus.mdx
@@ -1,5 +1,5 @@
 ---
-title: Citrcu's!
+title: Citru's!
 date: '10 de outubro de 2022'
 description: Pagina desenvolvida para encomendas de produtos da agricultura familiar
 thumbnailUrl: '/citrus.jpg'
@@ -23,14 +23,14 @@ Ferramentas utilizadas para o desenvolvimento:
 
 <img src="/pro-citrus.png" alt="citrus" width="100%"/>
 
-<div>
-    <a href="https://diegoroney.github.io/newcitrus/index.html">
 
-        <button type="button" 
-        class="btn btn-outline-info btn-sm">
-        Visite o site
-        </button>
-    </a>
-</div>
+
+<a href="https://diegoroney.github.io/newcitrus/index.html">
+
+    <div className="btn-post">
+    <p>Visite o site</p>
+    </div>
+</a>
+
 
 
