--- a/posts/10-10-22 Citrus.mdx
+++ b/posts/10-10-22 Citrus.mdx
@@ -3,7 +3,7 @@ title: Citru's!
 date: '10 de outubro de 2022'
 description: Pagina desenvolvida para encomendas de produtos da agricultura familiar
 thumbnailUrl: '/citrus.jpg'
-tags: ['functions', 'javascript']
+tags: [' Html ', 'Css ', 'Bootstrap']
 ---
 
 
