--- a/posts/10-10-22_Citrus.mdx
+++ b/posts/10-10-22_Citrus.mdx
@@ -24,13 +24,13 @@ Ferramentas utilizadas para o desenvolvimento:
 <img src="/pro-citrus.png" alt="citrus" width="100%"/>
 
 
-
+<div> 
 <a href="https://diegoroney.github.io/newcitrus/index.html">
 
     <div className="btn-post">
     <p>Visite o site</p>
     </div>
 </a>
-
+</div>
 
 
