--- a/posts/10-10-22_Citrus.mdx
+++ b/posts/10-10-22_Citrus.mdx
@@ -2,7 +2,7 @@
 title: Citru's!
 date: '10 de outubro de 2022'
 description: Pagina desenvolvida para encomendas de produtos da agricultura familiar
-thumbnailUrl: '/citrus.jpg'
+thumbnailUrl: '/posts_img/citrus/citrus.jpg'
 tags: [' Html ', 'Css ', 'Bootstrap']
 ---
 
@@ -21,7 +21,7 @@ Ferramentas utilizadas para o desenvolvimento:
 
 ---
 
-<img src="/pro-citrus.png" alt="citrus" width="100%"/>
+<img src="/posts_img/citrus/pro-citrus.png" alt="citrus" width="100%"/>
 
 
 <div> 
