--- a/posts/11-10-22_qrcode.mdx
+++ b/posts/11-10-22_qrcode.mdx
@@ -1,7 +1,7 @@
 ---
 title: QR Code!
 date: '10 de outubro de 2022'
-description: Pagina desenvolvida para encomendas de produtos da agricultura familiar
+description: COLE → GERE → BAIXE
 thumbnailUrl: '/posts_img/qrcode/qrcodeTB.png'
 tags: [' JavaScript ', 'React js ', 'Api']
 ---
