--- a/posts/11-10-22_qrcode.mdx
+++ b/posts/11-10-22_qrcode.mdx
@@ -21,7 +21,7 @@ Para o desenvolvimento foram utilizadas as tecnologias:
 
 ---
 
-<img src="/posts_img/qrcode/qrcode.jpg" alt="citrus" width="100%"/>
+<img src="/posts_img/qrcode/qrcodeTB.png" alt="qrcode" width="100%"/>
 
 
 <div> 
