--- a/posts/08-10-22_freeseeds.mdx
+++ b/posts/08-10-22_freeseeds.mdx
@@ -12,7 +12,8 @@ tags: [' reactjs ']
 
 ## Vamos semear nosso futuro.
 
-Somos um grupo que deseja ver a cidade mais verde. Para isso organizamos eventos para doação de sementes e mudas de arvores, palestras e treinamentos para o plantio e preservação.
+
+Somos um grupo dedicado a tornar nossa cidade mais verde e saudável. Para alcançar esse objetivo, organizamos eventos de doação de sementes e mudas de árvores, além de palestras e treinamentos sobre plantio e preservação ambiental. Acreditamos que, ao compartilhar conhecimento e incentivar práticas conscientes, podemos transformar o cenário urbano em um oásis de vida e bem-estar. Contamos com sua participação nessa jornada em prol de um futuro mais promissor para todos.
 
 Ferramenta utilizada para o desenvolvimento:
 - React js
